<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:name="hu.bme.aut.android.cryptowallet.Crypto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    app:layout_constraintHeight="100dp"
    app:layoutManager="LinearLayoutManager"
    tools:context=".fragments.CryptoList"
    tools:listitem="@layout/fragment_crypto" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="?attr/colorSecondary"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <LinearLayout
                    android:id="@+id/section_first_line"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/coinSymbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="10dp"
                        android:text="AC"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="("/>
                    <TextView
                        android:id="@+id/coinName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="AxiCoin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=")"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_alignBottom="@id/section_week_percentage"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/coinPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginEnd="4dp"
                        android:text="1000"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/section_hour_percentage"
                    android:layout_marginRight="4dp"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/in_last_hour"/>
                    <TextView
                        android:id="@+id/oneHour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginEnd="4dp"
                        android:text="1000"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percentage"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/section_day_percentage"
                    android:layout_below="@id/section_hour_percentage"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/in_last_day"/>
                    <TextView
                        android:id="@+id/oneDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginEnd="4dp"
                        android:text="2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percentage"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/section_week_percentage"
                    android:layout_below="@id/section_day_percentage"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/in_last_week"/>
                    <TextView
                        android:id="@+id/oneWeek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginEnd="4dp"
                        android:text="25"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percentage"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>